# envoy-processor-examples

./: .gitignore  .gitmodules  README.md  envoy.yaml  go.mod  go.sum
cmd/httptarget/: handler.go  main.go
cmd/processor/: main.go  service.go
go/: README.md  envoy.yaml  go.mod  go.sum
go/cmd/httptarget/: handler.go
go/cmd/processor/: main.go  service.go
go/test/: processor_integration_test.go
python/: Dockerfile  README.md  client.py  server.py  service.proto  service_pb2.py  service_pb2_grpc.py
rust/: Cargo.toml  build.rs
rust/src/: base64.rs  main.rs  service.rs
