[package]
name = "envoy-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
bytes = "1"
clap = {version = "3.0.14", features = ["derive"]}
envoy-ext-proc-stubs = {git = "https://github.com/gbrail/envoy-ext-proc-stubs-rust"}
futures = "0.3"
json = "0.12.4"
prost = "0.11"
tokio = {version = "1" , features = ["rt-multi-thread", "macros"]}
tonic = "0.8"
